issue #95 set java.rmi.server.useCodebaseOnly to false